--- a/roles/swapfile/tasks/swapfile/swapfile_mount.yml
+++ b/roles/swapfile/tasks/swapfile/swapfile_mount.yml
@@ -1,6 +1,5 @@
 - name: Activate Swap File
-  shell: swapon {{ swap_file_name }}
-  warn: no
+  command: swapon {{ swap_file_name }}
 
 - name: Set Swap File Activation at Startup
   mount:
